--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <!-- Facebook SDK related things -->
     <string name="facebook_app_id">409640192858052</string>
     <string name="fb_login_protocol_scheme">fb409640192858052</string>
+
+    <!-- Login Activity -->
+    <string name="connecting">Connecting...</string>
 </resources>
