New camera flow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="fb_login_protocol_scheme">fb409640192858052</string>
 
     <!-- Login Activity -->
-    <string name="connecting">Connecting...</string>
+    <string name="connecting">Connecting&#8230;</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -28,4 +28,5 @@
     <string name="user_icon">{ion-person}</string>
 
     <string name="choose_image_from">Choose image from</string>
+    <string name="camera_fail">Failed to pull image from camera.</string>
 </resources>
