--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,11 @@
 
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
+
+    <string name="blank_star">{ion-android-star-outline}</string>
+    <string name="filled_star">{ion-android-star}</string>
+    <string name="red_filled_star">{ion-android-star @color/app_red}</string>
+
+    <string name="bookmark_empty_icon">{ion-ios-bookmarks-outline}</string>
+    <string name="bookmark_filled_icon">{ion-ios-bookmarks}</string>
 </resources>
