Make Get It button do stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="get_it">Get It</string>
 
     <string name="x_likes">%d likes</string>
+
+    <string name="navigate_with">Navigate with</string>
 </resources>
